--- a/client/style.css
+++ b/client/style.css
@@ -3,6 +3,7 @@
   width: 30rem;
   padding: 1rem;
   background-color: brown;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 h1 {
   color: #ffffff;
